# CrewAI_Coursework

./: .gitignore  README.md  fix_json.py  output.json  pyproject.toml
knowledge/JSON Files/: item_subset.json  review_subset.json  test_review_subset.json  user_subset.json
src/agentsociety/: crew.py  main.py
src/agentsociety/config/: agents.yaml  tasks.yaml
